src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_function_call_ref.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%main = type { i32*, i32 }

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %b = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  store i32* %b, i32** %a, align 8
  ret void
}

