src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_function_call_sel_as_expression.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32, i32, i32 }

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %b = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %c = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %load_b = load i32, i32* %b, align [filtered]
  %load_c = load i32, i32* %c, align [filtered]
  %1 = select i1 true, i32 %load_c, i32 %load_b
  %tmpVar = add i32 %1, 10
  store i32 %tmpVar, i32* %a, align [filtered]
  ret void
}
