src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__cast_between_pointer_types.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%baz = type { i8*, i16 }

@baz_instance = global %baz zeroinitializer

define void @baz(%baz* %0) {
entry:
  %ptr_x = getelementptr inbounds %baz, %baz* %0, i32 0, i32 0
  %y = getelementptr inbounds %baz, %baz* %0, i32 0, i32 1
  %1 = bitcast i16* %y to i8*
  store i8* %1, i8** %ptr_x, align [filtered]
  ret void
}
