src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__cast_pointer_to_lword.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @baz() {
entry:
  %baz = alloca i16, align [filtered]
  %ptr_x = alloca ptr, align [filtered]
  %y = alloca i64, align [filtered]
  store ptr null, ptr %ptr_x, align [filtered]
  store i64 0, ptr %y, align [filtered]
  store i16 0, ptr %baz, align [filtered]
  %load_ptr_x = load ptr, ptr %ptr_x, align [filtered]
  %0 = ptrtoint ptr %load_ptr_x to i64
  store i64 %0, ptr %y, align [filtered]
  %baz_ret = load i16, ptr %baz, align [filtered]
  ret i16 %baz_ret
}
