src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__hardware_access_codegen.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%prg = type { i8, i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  store i32 0, i8* %x, align 4
  store i32 0, i8* %y, align 4
  store i32 0, i8* %z, align 4
  store i8 0, i8* %x, align 1
  store i8 0, i8* %y, align 1
  store i8 0, i8* %z, align 1
  ret void
}

